[gd_scene load_steps=18 format=3 uid="uid://bvm5os7oot88i"]

[ext_resource type="Script" path="res://scenes/enemies/boss/final_boss.gd" id="1_bai75"]
[ext_resource type="Texture2D" uid="uid://csimvk5qyuuxw" path="res://props/EnemySprites/Pumpkin_Boss.png" id="1_ytr58"]
[ext_resource type="Shader" path="res://scenes/enemies/boss/final_boss.gdshader" id="2_sp2uj"]
[ext_resource type="AudioStream" uid="uid://buiqxb00hksju" path="res://music/FinalBossHurt.mp3" id="4_673ji"]
[ext_resource type="AudioStream" uid="uid://ej5sikxmmhl5" path="res://music/fireworks.mp3" id="5_65nub"]

[sub_resource type="Shader" id="Shader_rf0pp"]
code = "shader_type canvas_item;

uniform vec4 flash_color : source_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment( ) {
	vec4 color = texture(TEXTURE, UV) ;
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_51xyh"]
shader = SubResource("Shader_rf0pp")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8svrn"]
atlas = ExtResource("1_ytr58")
region = Rect2(0, 0, 384, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpubk"]
atlas = ExtResource("1_ytr58")
region = Rect2(384, 0, 384, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vm0u"]
atlas = ExtResource("1_ytr58")
region = Rect2(768, 0, 384, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckagf"]
atlas = ExtResource("1_ytr58")
region = Rect2(1152, 0, 384, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_aal1o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpubk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vm0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckagf")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_6id3t"]
length = 0.7

[sub_resource type="Animation" id="Animation_psj5c"]
resource_name = "fade"

[sub_resource type="Animation" id="Animation_hffx2"]
resource_name = "flash"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.64831, 0, 0.0634607, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yt60g"]
_data = {
"RESET": SubResource("Animation_6id3t"),
"fade": SubResource("Animation_psj5c"),
"flash": SubResource("Animation_hffx2")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hkdrv"]
shader = ExtResource("2_sp2uj")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/firework_count = 40.0
shader_parameter/particle_count = 10.0
shader_parameter/size = 4.0
shader_parameter/sharpen = 3.0
shader_parameter/speed = 4.0
shader_parameter/gravity = 0.9
shader_parameter/lifetime = 7.0

[node name="FinalBoss" type="CharacterBody2D"]
script = ExtResource("1_bai75")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_51xyh")
position = Vector2(-7.49996, 0)
scale = Vector2(2.53906, 2.5)
sprite_frames = SubResource("SpriteFrames_aal1o")
frame = 3
frame_progress = 0.305617
flip_h = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
modulate = Color(0.0431373, 1, 0.866667, 1)
position = Vector2(-74.5, 145.5)
polygon = PackedVector2Array(-179.5, 229.5, 179.5, 227.5, 267.5, 125.5, 272.5, -171.5, 163.5, -366.5, -150.5, -368.5, -256.5, -192.5, -231.5, 118.5)

[node name="HitBox" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PackedVector2Array(-364, -10, -357, 243, -326, 326, -286, 350, 149, 344, 210, 277, 228, 222, 233, -5, 196, -133, 67, -254, -192, -248, -318, -136)

[node name="LaunchSpotUpLeft" type="Marker2D" parent="."]
position = Vector2(400, 0)

[node name="LaunchSpotCenterLeft" type="Marker2D" parent="."]
position = Vector2(403, 142)

[node name="LaunchSpotLowerLeft" type="Marker2D" parent="."]
position = Vector2(408, 294)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yt60g")
}

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_673ji")

[node name="TextureRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_hkdrv")
offset_left = -725.0
offset_top = -648.0
offset_right = -43.0
offset_bottom = 5.0
scale = Vector2(2, 2)
color = Color(0, 0, 0, 0)

[node name="Fireworks" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_65nub")
